base/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: slotmachine
spec:
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 80
